--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <body>
 
-  <h1>HTML ISSUE BOT 9000 - Checks for Issues<h1>
+  <h1>HTML ISSUE BOT 9000 - Checks for Issues</h1>
 
   <p>Issue Bot's Daily Diary</p>
 
